Fix lack of spacing below column-box titles

--- a/src/css/protocol/layouts/columns.scss
+++ b/src/css/protocol/layouts/columns.scss
@@ -16,6 +16,6 @@
     }
 
     .bb-column-block-header  {
-        padding-bottom: 0;
+        padding-bottom: $layout-md;
     }
 }
